@@ -57,7 +57,15 @@ int Event_Traits::visit_root (AST_Root * node)
 //
 int Event_Traits::visit_module (AST_Module * node)
 {
-  return this->visit_scope (node);
+  ACE_CString local_name (node->local_name ()->get_string ());
+  ACE_CString backup (this->scope_);
+  this->scope_ += local_name + "::";
+
+  if (0 != this->visit_scope (node))
+    return -1;
+
+  this->scope_ = backup;
+  return 0;
 }
 
 //
@@ -65,15 +73,16 @@ int Event_Traits::visit_module (AST_Module * node)
 //
 int Event_Traits::visit_eventtype (AST_EventType * node)
 {
+  const char * local_name = node->local_name ()->get_string ();
   const char * full_name = node->full_name ();
 
   // We should probably store the name of the TAO event when we are actually
   // creating the event. This way, we can just lookup the event name and not
   // try to reconstruct it here!
-  std::string tao_full_name (node->full_name ());
-  size_t pos = tao_full_name.find_last_of (":");
+//  std::string tao_full_name (node->full_name ());
+//  size_t pos = tao_full_name.find_last_of (":");
 
-  tao_full_name.insert (pos + 1, "TAO_");
+//  tao_full_name.insert (pos + 1, "TAO_");
 
   this->hfile_
     << "/**" << std::endl
@@ -84,7 +93,7 @@ int Event_Traits::visit_eventtype (AST_EventType * node)
     << "template < >" << std::endl
     << "struct TAO_Event_Traits < ::" << full_name << " >"
     << "{"
-    << "typedef ::" << tao_full_name << " tao_event_type;"
+    << "typedef ::" << this->scope_ << "TAO_" << local_name << " tao_event_type;"
     << "};";
 
   return 0;
