@@ -180,7 +180,7 @@ int Stub_File::visit_eventtype (AST_EventType * node)
   this->hfile_
     << "TAO_" << local_name << " :" << std::endl
     << "  public virtual ::iCCM::TAO_Event," << std::endl
-    << "  public virtual ::OBV_" << full_name << "," << std::endl
+    << "  public virtual OBV_" << full_name << "," << std::endl
     << "  public virtual ::CORBA::DefaultValueRefCountBase" << std::endl
     << "{"
     << "public:" << std::endl;
